--- a/sdk/@launchdarkly/observability/tsconfig.json
+++ b/sdk/@launchdarkly/observability/tsconfig.json
@@ -1,8 +1,31 @@
 {
-  "extends": "../../highlight-run/tsconfig.json",
   "compilerOptions": {
     "outDir": "dist",
+    "allowJs": true,
+    "allowSyntheticDefaultImports": true,
+    "baseUrl": "src",
+    "declaration": true,
+    "declarationDir": "dist",
+    "downlevelIteration": true,
+    "emitDeclarationOnly": true,
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "isolatedModules": true,
+    "jsx": "react",
+    "lib": ["dom", "dom.iterable", "esnext"],
+    "module": "esnext",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "skipLibCheck": true,
+    "target": "ESNext",
+    "rootDir": "src",
+    "types": ["@types/chrome", "@types/node", "vitest/globals"],
+    /* Linting */
+    "strict": true,
+    "noUnusedLocals": true,
+    "noFallthroughCasesInSwitch": true
   },
-  "include": "src",
+  "include": ["src"],
   "exclude": ["**/src/**/*.test.tsx"],
+  "files": ["package.json"]
 }
