--- a/sdk/@launchdarkly/session-replay/package.json
+++ b/sdk/@launchdarkly/session-replay/package.json
@@ -35,19 +35,9 @@
 		"vitest": "^3.1.2"
 	},
 	"type": "module",
-	"main": "./dist/index.js",
-	"module": "./dist/index.js",
-	"unpkg": "./dist/index.umd.js",
-	"jsdelivr": "./dist/index.umd.js",
+	"main": "./dist/session-replay.js",
+	"module": "./dist/session-replay.js",
 	"types": "./dist/index.d.ts",
-	"exports": {
-		"types": "./dist/index.d.ts",
-		"unpkg": "./dist/index.umd.js",
-		"jsdelivr": "./dist/index.umd.js",
-		"import": "./dist/index.js",
-		"require": "./dist/index.js",
-		"default": "./dist/index.js"
-	},
 	"files": [
 		"dist"
 	],
