--- a/sdk/@launchdarkly/observability/package.json
+++ b/sdk/@launchdarkly/observability/package.json
@@ -31,6 +31,7 @@
 	},
 	"devDependencies": {
 		"highlight.run": "workspace:*",
+		"rollup-plugin-visualizer": "^5.14.0",
 		"typescript": "^5.8.3",
 		"vite": "^6.3.4",
 		"vitest": "^3.1.2"
