--- a/sdk/highlight-run/package.json
+++ b/sdk/highlight-run/package.json
@@ -25,8 +25,7 @@
 		}
 	},
 	"scripts": {
-		"build": "yarn typegen && vite build && yarn build:umd",
-		"build:umd": "cp dist/index.umd.cjs dist/index.umd.js",
+		"build": "yarn typegen && vite build",
 		"build:watch": "vite build --watch",
 		"codegen": "graphql-codegen --config codegen.yml",
 		"dev": "run-p dev:server dev:watch",
@@ -38,18 +37,37 @@
 		"typegen": "tsc && node scripts/replace-client-imports.mjs"
 	},
 	"type": "module",
-	"main": "./dist/index.js",
-	"module": "./dist/index.js",
-	"unpkg": "./dist/index.umd.js",
-	"jsdelivr": "./dist/index.umd.js",
-	"types": "./dist/highlight-run/src/index.d.ts",
 	"exports": {
-		"types": "./dist/highlight-run/src/index.d.ts",
-		"unpkg": "./dist/index.umd.js",
-		"jsdelivr": "./dist/index.umd.js",
-		"import": "./dist/index.js",
-		"require": "./dist/index.js",
-		"default": "./dist/index.js"
+		".": {
+			"types": "./dist/highlight-run/src/index.d.ts",
+			"import": "./dist/index.js",
+			"require": "./dist/index.js",
+			"default": "./dist/index.js"
+		},
+		"./observe": {
+			"types": "./dist/highlight-run/src/plugins/observe.d.ts",
+			"import": "./dist/observe.js",
+			"require": "./dist/observe.js",
+			"default": "./dist/observe.js"
+		},
+		"./record": {
+			"types": "./dist/highlight-run/src/plugins/record.d.ts",
+			"import": "./dist/record.js",
+			"require": "./dist/record.js",
+			"default": "./dist/record.js"
+		},
+		"./ld/observe": {
+			"types": "./dist/highlight-run/src/sdk/observe.d.ts",
+			"import": "./dist/LDObserve.js",
+			"require": "./dist/LDObserve.js",
+			"default": "./dist/LDObserve.js"
+		},
+		"./ld/record": {
+			"types": "./dist/highlight-run/src/sdk/record.d.ts",
+			"import": "./dist/LDRecord.js",
+			"require": "./dist/LDRecord.js",
+			"default": "./dist/LDRecord.js"
+		}
 	},
 	"files": [
 		"dist"
@@ -120,8 +138,7 @@
 	"size-limit": [
 		{
 			"path": [
-				"dist/*.js",
-				"!dist/*.umd.js"
+				"dist/*.js"
 			],
 			"limit": "256 kB",
 			"brotli": true
