--- a/sdk/@launchdarkly/observability/tsconfig.json
+++ b/sdk/@launchdarkly/observability/tsconfig.json
@@ -13,8 +13,8 @@
     "isolatedModules": true,
     "jsx": "react",
     "lib": ["dom", "dom.iterable", "esnext"],
-    "module": "esnext",
-    "moduleResolution": "node",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "target": "ESNext",
