--- a/sdk/highlight-run/package.json
+++ b/sdk/highlight-run/package.json
@@ -90,6 +90,7 @@
 		"@graphql-codegen/typescript": "^4.0.1",
 		"@graphql-codegen/typescript-graphql-request": "^6.0.1",
 		"@graphql-codegen/typescript-operations": "^4.0.1",
+		"@launchdarkly/js-client-sdk": "^0.6.0",
 		"@opentelemetry/api": "^1.9.0",
 		"@opentelemetry/exporter-metrics-otlp-http": ">=0.57.1",
 		"@opentelemetry/exporter-trace-otlp-http": ">=0.57.1",
