--- a/.github/workflows/manual-publish-docs.yml
+++ b/.github/workflows/manual-publish-docs.yml
@@ -47,10 +47,9 @@ jobs:
             - name: Build docs
               run: yarn docs
 
-            - name: Publish
-              shell: bash
-              run: |
-                  ./scripts/publish-npm.sh
-              env:
-                  LD_RELEASE_IS_PRERELEASE: ${{ inputs.prerelease }}
-                  LD_RELEASE_IS_DRYRUN: ${{ inputs.dry-run }}
+            - uses: launchdarkly/gh-actions/actions/publish-pages@publish-pages-v1.0.2
+              name: 'Publish to Github pages'
+              with:
+                  docs_path: sdk/highlight-run/docs
+                  output_path: packages/@launchdarkly/observability
+                  github_token: ${{ secrets.GITHUB_TOKEN }}
