--- a/package.json
+++ b/package.json
@@ -42,5 +42,8 @@
 	"resolutions": {
 		"ansi-color@^0.2.1": "patch:ansi-color@npm%3A0.2.1#./.yarn/patches/ansi-color-npm-0.2.1-f7243d10a4.patch"
 	},
-	"packageManager": "yarn@4.9.1"
+	"packageManager": "yarn@4.9.1",
+	"installConfig": {
+		"hoistingLimits": "dependencies"
+	}
 }
