--- a/sdk/@launchdarkly/observability-react-native/package.json
+++ b/sdk/@launchdarkly/observability-react-native/package.json
@@ -47,6 +47,7 @@
 		"react-native": "^0.79.0",
 		"typescript": "^5.0.4",
 		"vite": "^6.3.4",
+		"vite-plugin-dts": "^4.5.4",
 		"vitest": "^2.1.3"
 	}
 }
