--- a/e2e/react-native/package.json
+++ b/e2e/react-native/package.json
@@ -50,9 +50,12 @@
 		"@types/jest": "^29.5.12",
 		"@types/react": "~18.3.12",
 		"@types/react-test-renderer": "^18.3.0",
+		"@typescript-eslint/eslint-plugin": "^8.36.0",
+		"@typescript-eslint/parser": "^8.36.0",
 		"eslint": "^8.57.1",
 		"eslint-config-prettier": "^8.10.0",
 		"eslint-plugin-import": "^2.31.0",
+		"eslint-plugin-prettier": "^5.5.1",
 		"eslint-plugin-react": "^7.37.2",
 		"eslint-plugin-react-hooks": "^5.0.0",
 		"eslint-plugin-tailwindcss": "^3.17.5",
