--- a/sdk/@launchdarkly/observability-node/package.json
+++ b/sdk/@launchdarkly/observability-node/package.json
@@ -37,6 +37,7 @@
 		"@launchdarkly/node-server-sdk": "^9.9.2"
 	},
 	"devDependencies": {
+		"@launchdarkly/js-server-sdk-common": "^2.15.2",
 		"@launchdarkly/node-server-sdk": "^9.9.2",
 		"@opentelemetry/api": "^1.9.0",
 		"@opentelemetry/api-logs": "^0.203.0",
