--- a/sdk/@launchdarkly/observability-react-native/package.json
+++ b/sdk/@launchdarkly/observability-react-native/package.json
@@ -10,8 +10,7 @@
 		"build": "vite build",
 		"typegen": "tsc",
 		"test": "vitest run",
-		"test:watch": "vitest watch",
-		"codegen": "graphql-codegen"
+		"test:watch": "vitest watch"
 	},
 	"main": "./dist/index.cjs",
 	"module": "./dist/index.js",
@@ -29,7 +28,6 @@
 		"access": "public"
 	},
 	"dependencies": {
-		"@graphql-codegen/cli": "^5.0.7",
 		"@opentelemetry/api": "^1.9.0",
 		"@opentelemetry/exporter-trace-otlp-http": "^0.56.0",
 		"@opentelemetry/instrumentation": "^0.57.2",
@@ -44,7 +42,6 @@
 		"react-native": ">=0.70.0"
 	},
 	"devDependencies": {
-		"@graphql-codegen/client-preset": "^4.8.3",
 		"@launchdarkly/observability-shared": "workspace:*",
 		"@launchdarkly/react-native-client-sdk": "^10.0.0",
 		"graphql": "^16.11.0",
