--- a/sdk/@launchdarkly/observability-node/package.json
+++ b/sdk/@launchdarkly/observability-node/package.json
@@ -67,5 +67,8 @@
 		"rollup": "^4.34.8",
 		"typescript": "^5.0.4",
 		"vitest": "^2.1.3"
+	},
+	"installConfig": {
+		"hoistingLimits": "dependencies"
 	}
 }
