--- a/sdk/@launchdarkly/observability-react-native/package.json
+++ b/sdk/@launchdarkly/observability-react-native/package.json
@@ -54,5 +54,8 @@
 		"typescript": "^5.0.4",
 		"vite": "^6.3.4",
 		"vitest": "^2.1.3"
+	},
+	"installConfig": {
+		"hoistingLimits": "dependencies"
 	}
 }
