--- a/e2e/react-native-otel/package.json
+++ b/e2e/react-native-otel/package.json
@@ -6,16 +6,16 @@
 		"start": "expo start",
 		"reset-project": "node ./scripts/reset-project.js",
 		"android": "expo start --android",
-		"android:run": "expo run:android",
+		"android:dev-build": "expo run:android",
 		"ios": "expo start --ios",
-		"ios:run": "expo run:ios",
+		"ios:dev-build": "expo run:ios",
 		"web": "expo start --web",
 		"lint": "expo lint",
 		"otel:start": "docker-compose -f docker-compose.yaml up"
 	},
 	"dependencies": {
 		"@expo/vector-icons": "^14.1.0",
-		"@launchdarkly/observability-react-native": "*",
+		"@launchdarkly/observability-react-native": "workspace:*",
 		"@launchdarkly/react-native-client-sdk": "^10.10.4",
 		"@react-native-async-storage/async-storage": "^2.1.2",
 		"@react-navigation/bottom-tabs": "^7.3.10",
