--- a/sdk/@launchdarkly/observability-react-native/package.json
+++ b/sdk/@launchdarkly/observability-react-native/package.json
@@ -29,13 +29,19 @@
 	},
 	"dependencies": {
 		"@opentelemetry/api": "^1.9.0",
-		"@opentelemetry/exporter-trace-otlp-http": "^0.56.0",
-		"@opentelemetry/instrumentation": "^0.57.2",
-		"@opentelemetry/instrumentation-fetch": "^0.57.2",
-		"@opentelemetry/instrumentation-xml-http-request": "^0.57.2",
-		"@opentelemetry/resources": "^1.30.1",
-		"@opentelemetry/sdk-trace-web": "^1.30.1",
-		"@opentelemetry/semantic-conventions": "^1.30.0"
+		"@opentelemetry/core": "^2.0.1",
+		"@opentelemetry/exporter-logs-otlp-http": "^0.203.0",
+		"@opentelemetry/exporter-metrics-otlp-http": "^0.203.0",
+		"@opentelemetry/exporter-trace-otlp-http": "^0.203.0",
+		"@opentelemetry/instrumentation": "^0.203.0",
+		"@opentelemetry/instrumentation-fetch": "^0.203.0",
+		"@opentelemetry/instrumentation-xml-http-request": "^0.203.0",
+		"@opentelemetry/otlp-exporter-base": "^0.203.0",
+		"@opentelemetry/resources": "^2.0.1",
+		"@opentelemetry/sdk-metrics": "^2.0.1",
+		"@opentelemetry/sdk-trace-base": "2.0.1",
+		"@opentelemetry/sdk-trace-web": "^2.0.1",
+		"@opentelemetry/semantic-conventions": "^1.35.0"
 	},
 	"peerDependencies": {
 		"@launchdarkly/react-native-client-sdk": "^10.0.0",
@@ -49,5 +55,8 @@
 		"vite": "^6.3.4",
 		"vite-plugin-dts": "^4.5.4",
 		"vitest": "^2.1.3"
+	},
+	"installConfig": {
+		"hoistingLimits": "dependencies"
 	}
 }
