--- a/sdk/@launchdarkly/observability-python/pyproject.toml
+++ b/sdk/@launchdarkly/observability-python/pyproject.toml
@@ -71,8 +71,8 @@ dependencies = [
     "urllib3>=2.2.1",
     "requests>=2.31.0",
     "ariadne-codegen (>=0.14.0,<0.15.0)",
-    "launchdarkly-server-sdk @ file:///home/rlamb/code/launchdarkly/python-server-sdk",
-    "launchdarkly-server-sdk-otel @ file:///home/rlamb/code/launchdarkly/python-server-sdk-otel",
+    "launchdarkly-server-sdk (>=9.12.0, < 10.0.0)",
+    "launchdarkly-server-sdk-otel (>=1.2.0, < 2.0.0)",
 ]
 
 [project.optional-dependencies]
