--- a/sdk/@launchdarkly/observability-node/package.json
+++ b/sdk/@launchdarkly/observability-node/package.json
@@ -11,7 +11,8 @@
 		"dev": "yarn build --watch",
 		"build": "rollup --config rollup.config.mjs",
 		"test": "vitest run",
-		"codegen": "graphql-codegen"
+		"codegen": "graphql-codegen",
+		"doc": "typedoc --options ./typedoc.json"
 	},
 	"main": "./dist/index.cjs",
 	"module": "./dist/index.js",
@@ -66,7 +67,8 @@
 		"encoding": "^0.1.13",
 		"rollup": "^4.34.8",
 		"typescript": "^5.0.4",
-		"vitest": "^2.1.3"
+		"vitest": "^2.1.3",
+		"typedoc": "^0.28.7"
 	},
 	"installConfig": {
 		"hoistingLimits": "dependencies"
