--- a/sdk/@launchdarkly/observability-node/package.json
+++ b/sdk/@launchdarkly/observability-node/package.json
@@ -66,9 +66,9 @@
 		"@types/node": "^14.18.63",
 		"encoding": "^0.1.13",
 		"rollup": "^4.34.8",
+		"typedoc": "^0.28.7",
 		"typescript": "^5.0.4",
-		"vitest": "^2.1.3",
-		"typedoc": "^0.28.7"
+		"vitest": "^2.1.3"
 	},
 	"installConfig": {
 		"hoistingLimits": "dependencies"
