--- a/sdk/@launchdarkly/observability-shared/package.json
+++ b/sdk/@launchdarkly/observability-shared/package.json
@@ -20,6 +20,7 @@
 	"dependencies": {
 		"@opentelemetry/api": "^1.9.0",
 		"@opentelemetry/core": "^2.0.1",
+		"@opentelemetry/sdk-logs": "^0.203.0",
 		"@opentelemetry/sdk-trace-base": "^2.0.1",
 		"graphql": "^16.11.0"
 	}
