--- a/sdk/@launchdarkly/observability-node/package.json
+++ b/sdk/@launchdarkly/observability-node/package.json
@@ -11,7 +11,8 @@
 		"dev": "yarn build --watch",
 		"build": "rollup --config rollup.config.mjs",
 		"test": "vitest run",
-		"codegen": "graphql-codegen"
+		"codegen": "graphql-codegen",
+		"doc": "typedoc --options ./typedoc.json"
 	},
 	"main": "./dist/index.cjs",
 	"module": "./dist/index.js",
@@ -65,6 +66,7 @@
 		"@types/node": "^14.18.63",
 		"encoding": "^0.1.13",
 		"rollup": "^4.34.8",
+		"typedoc": "^0.28.7",
 		"typescript": "^5.0.4",
 		"vitest": "^2.1.3"
 	},
