Add docs publishing for observability-node.

--- a/.github/workflows/turbo.yml
+++ b/.github/workflows/turbo.yml
@@ -62,6 +62,18 @@ jobs:
               if: github.ref == 'refs/heads/main'
               run: yarn publish:highlight
 
+            - name: Publish Highlight.run Docs
+              if: github.ref == 'refs/heads/main'
+              uses: ./.github/workflows/manual-publish-docs.yml
+              with:
+                workspace_path: sdk/highlight-run
+
+            - name: Publish @launchdarkly/observability-node Docs
+              if: github.ref == 'refs/heads/main'
+              uses: ./.github/workflows/manual-publish-docs.yml
+              with:
+                workspace_path: sdk/@launchdarkly/observability-node
+
             - uses: launchdarkly/gh-actions/actions/release-secrets@release-secrets-v1.2.0
               if: github.ref == 'refs/heads/main'
               name: 'Get NPM token'
