--- a/.github/workflows/turbo.yml
+++ b/.github/workflows/turbo.yml
@@ -62,18 +62,6 @@ jobs:
               if: github.ref == 'refs/heads/main'
               run: yarn publish:highlight
 
-            - name: Publish Highlight.run Docs
-              if: github.ref == 'refs/heads/main'
-              uses: ./.github/workflows/manual-publish-docs.yml
-              with:
-                  workspace_path: sdk/highlight-run
-
-            - name: Publish @launchdarkly/observability-node Docs
-              if: github.ref == 'refs/heads/main'
-              uses: ./.github/workflows/manual-publish-docs.yml
-              with:
-                  workspace_path: sdk/@launchdarkly/observability-node
-
             - uses: launchdarkly/gh-actions/actions/release-secrets@release-secrets-v1.2.0
               if: github.ref == 'refs/heads/main'
               name: 'Get NPM token'
@@ -105,3 +93,20 @@ jobs:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
                   NPM_TOKEN: ${{ secrets.NPM_TOKEN_HIGHLIGHT_RUN }}
                   NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN_HIGHLIGHT_RUN }}
+
+    publish-highlight-run-docs:
+        name: Publish Highlight.run Docs
+        if: github.ref == 'refs/heads/main'
+        uses: ./.github/workflows/manual-publish-docs.yml
+        with:
+            workspace_path: sdk/highlight-run
+
+    publish-observability-node-docs:
+        # Run the docs publish after the highlight.run docs are published.
+        needs: publish-highlight-run-docs
+        # Runs the job even if the highlight.run docs publish fails.
+        if: ${{ always() && !failure() && !cancelled() && github.ref == 'refs/heads/main'}}
+        name: Publish @launchdarkly/observability-node Docs
+        uses: ./.github/workflows/manual-publish-docs.yml
+        with:
+            workspace_path: sdk/@launchdarkly/observability-node
