Independent concurrency groups for monorepo build and docs.

--- a/.github/workflows/turbo.yml
+++ b/.github/workflows/turbo.yml
@@ -13,9 +13,9 @@ permissions:
     pull-requests: write
     issues: read
 
-concurrency: ${{ github.workflow }}-${{ github.ref }}
 jobs:
     yarn-monorepo:
+        concurrency: ${{ github.workflow }}-${{ github.ref }}
         name: Build Yarn Turborepo
         timeout-minutes: 60
         runs-on: ubuntu-22.04-8core-32gb
@@ -95,6 +95,7 @@ jobs:
                   NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN_HIGHLIGHT_RUN }}
 
     publish-highlight-run-docs:
+        concurrency: ${{ github.workflow }}-${{ github.ref }}-publish-highlight-run-docs
         name: Publish Highlight.run Docs
         if: github.ref == 'refs/heads/main'
         uses: ./.github/workflows/manual-publish-docs.yml
@@ -102,6 +103,7 @@ jobs:
             workspace_path: sdk/highlight-run
 
     publish-observability-node-docs:
+        concurrency: ${{ github.workflow }}-${{ github.ref }}-publish-observability-node-docs
         # Run the docs publish after the highlight.run docs are published.
         needs: publish-highlight-run-docs
         # Runs the job even if the highlight.run docs publish fails.
