--- a/.github/workflows/turbo.yml
+++ b/.github/workflows/turbo.yml
@@ -97,7 +97,7 @@ jobs:
     publish-highlight-run-docs:
         concurrency: ${{ github.workflow }}-${{ github.ref }}-publish-highlight-run-docs
         name: Publish Highlight.run Docs
-        if: github.ref == 'refs/heads/main'
+        # if: github.ref == 'refs/heads/main'
         uses: ./.github/workflows/manual-publish-docs.yml
         with:
             workspace_path: sdk/highlight-run
@@ -107,7 +107,7 @@ jobs:
         # Run the docs publish after the highlight.run docs are published.
         needs: publish-highlight-run-docs
         # Runs the job even if the highlight.run docs publish fails.
-        if: ${{ always() && !cancelled() && github.ref == 'refs/heads/main'}}
+        # if: ${{ always() && !cancelled() && github.ref == 'refs/heads/main'}}
         name: Publish @launchdarkly/observability-node Docs
         uses: ./.github/workflows/manual-publish-docs.yml
         with:
