--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"sdk/@launchdarkly/*"
 	],
 	"scripts": {
-		"build": "yarn turbo run build --filter '!@rrweb/web-extension' --filter '!nextjs'",
+		"build": "yarn turbo run build --filter '!@rrweb/web-extension'",
 		"docs": "yarn turbo run docs",
 		"enforce-size": "yarn turbo run enforce-size --filter highlight.run...",
 		"format-check": "prettier --check --ignore-unknown .",
@@ -21,7 +21,7 @@
 		"preinstall": "git submodule update --init --recursive || true",
 		"publish": "yarn workspaces foreach -A --include '@launchdarkly/*' --exclude '@launchdarkly/observability-sdk' --exclude '@launchdarkly/observability-shared' npm publish --access public --tolerate-republish --provenance",
 		"publish:highlight": "yarn workspaces foreach -A --include '@highlight-run/*' --include 'highlight.run' npm publish --access public --tolerate-republish --provenance",
-		"test": "yarn turbo run test --filter=!nextjs --filter=!rrweb --filter=!rrvideo --filter=!@rrweb/rrweb-plugin-console-record --filter=!@rrweb/_monorepo --filter=!@rrweb/all --filter=!@rrweb/record --filter=!@rrweb/replay --filter=!@rrweb/types --filter=!@rrweb/packer --filter=!@rrweb/utils --filter=!@rrweb/web-extension --filter=!rrweb-snapshot --filter=!rrweb-player --filter=!rrdom --filter=!rrdom-nodejs"
+		"test": "yarn turbo run test --filter=!rrweb --filter=!rrvideo --filter=!@rrweb/rrweb-plugin-console-record --filter=!@rrweb/_monorepo --filter=!@rrweb/all --filter=!@rrweb/record --filter=!@rrweb/replay --filter=!@rrweb/types --filter=!@rrweb/packer --filter=!@rrweb/utils --filter=!@rrweb/web-extension --filter=!rrweb-snapshot --filter=!rrweb-player --filter=!rrdom --filter=!rrdom-nodejs"
 	},
 	"devDependencies": {
 		"@changesets/cli": "^2.28.1",
