--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -14,7 +14,7 @@ jobs:
             python-plugin-released: ${{ steps.release.outputs['sdk/@launchdarkly/observability-python--release_created'] }}
             python-plugin-tag-name: ${{ steps.release.outputs['sdk/@launchdarkly/observability-python--tag_name'] }}
         steps:
-            - uses: googleapis/release-please-action@v4
+            - uses: googleapis/release-please-action@a02a34c4d625f9be7cb89156071d8567266a2445
               id: release
 
             - uses: actions/checkout@v4
@@ -58,7 +58,7 @@ jobs:
                   echo "package-hashes=$(sha256sum * | base64 -w0)" >> "$GITHUB_OUTPUT"
 
             - name: Publish package distributions to PyPI
-              uses: pypa/gh-action-pypi-publish@release/v1
+              uses: pypa/gh-action-pypi-publish@76f52bc884231f62b9a034ebfe128415bbaabdfc
               with:
                   password: ${{env.PYPI_AUTH_TOKEN}}
 
