--- a/.github/workflows/manual-publish-docs.yml
+++ b/.github/workflows/manual-publish-docs.yml
@@ -28,13 +28,24 @@ jobs:
               uses: actions/checkout@v4
             - run: git submodule update --init --recursive
 
+            - name: Check if JS package
+              id: check-js-package
+              run: |
+                  if ./scripts/is-js-package.sh ${{ inputs.workspace_path }}; then
+                      echo "is_js_package=true" >> $GITHUB_OUTPUT
+                  else
+                      echo "is_js_package=false" >> $GITHUB_OUTPUT
+                  fi
+
             - name: Setup Node.js environment
+              if: ${{ steps.check-js-package.outputs.is_js_package == 'true' }}
               uses: actions/setup-node@v4
               with:
                   node-version: lts/*
                   cache: 'yarn'
 
             - name: Install js dependencies
+              if: ${{ steps.check-js-package.outputs.is_js_package == 'true' }}
               run: yarn install --mode=skip-build
               env:
                   PUPPETEER_SKIP_CHROMIUM_DOWNLOAD: true
@@ -45,18 +56,15 @@ jobs:
                   WORKSPACE_NAME=$(./scripts/package-name.sh ${{ inputs.workspace_path }})
                   echo "WORKSPACE_NAME=$WORKSPACE_NAME" >> $GITHUB_ENV
 
-            - name: Check if JS package
-              id: check-js-package
-              run: |
-                  if ./scripts/is-js-package.sh ${{ inputs.workspace_path }}; then
-                      echo "is_js_package=true" >> $GITHUB_OUTPUT
-                  else
-                      echo "is_js_package=false" >> $GITHUB_OUTPUT
-                  fi
-
             - name: Build JS package docs
               if: ${{ steps.check-js-package.outputs.is_js_package == 'true' }}
               run: yarn docs --filter ${{ env.WORKSPACE_NAME }}
+
+            - name: Make Install
+              if: ${{ steps.check-js-package.outputs.is_js_package == 'false' }}
+              run: |
+                  cd ${{ inputs.workspace_path }}
+                  make install
 
             - name: Build Makefile Docs
               # Assume non-js projects will use a Makefile to build docs.
