--- a/.github/workflows/manual-publish-docs.yml
+++ b/.github/workflows/manual-publish-docs.yml
@@ -71,7 +71,7 @@ jobs:
               run: yarn docs --filter ${{ env.WORKSPACE_NAME }}
 
 
-            - uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065
+            - uses: actions/setup-python@v5
               if: ${{ steps.check-python-package.outputs.is_python_package == 'true' }}
               with:
                   python-version: 3.10
