--- a/.github/workflows/python-plugin.yml
+++ b/.github/workflows/python-plugin.yml
@@ -28,7 +28,7 @@ jobs:
               with:
                   token: ${{ secrets.GITHUB_TOKEN }}
 
-            - uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065
+            - uses: actions/setup-python@v5
               with:
                   python-version: 3.10
 
