--- a/.github/workflows/manual-publish-docs.yml
+++ b/.github/workflows/manual-publish-docs.yml
@@ -74,7 +74,7 @@ jobs:
             - uses: actions/setup-python@v5
               if: ${{ steps.check-python-package.outputs.is_python_package == 'true' }}
               with:
-                  python-version: 3.10
+                  python-version: '3.10'
 
             - name: Install poetry
               if: ${{ steps.check-python-package.outputs.is_python_package == 'true' }}
