--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -33,7 +33,7 @@ jobs:
         steps:
             - uses: actions/setup-python@v5
               with:
-                  python-version: 3.10
+                  python-version: '3.10'
 
             - name: Install poetry
 
@@ -60,6 +60,7 @@ jobs:
             - name: Publish package distributions to PyPI
               uses: pypa/gh-action-pypi-publish@76f52bc884231f62b9a034ebfe128415bbaabdfc
               with:
+                  packages-dir: ./sdk/@launchdarkly/observability-python/dist
                   password: ${{env.PYPI_AUTH_TOKEN}}
 
             - name: Build and Publish Docs
